--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <script src="./node_modules/axios/dist/axios.min.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
