--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <img src="./spinner.gif" />
+    <img src="./spinner.gif" id="spinner" class="hideSpinner" />
     <div id="dogGallery"></div>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="main.js"></script>
